--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </script>
 		<title>The Kingest of Kongs</title>
 	</head>
+	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+
 	<body>
 	<h1 style="text-align: center"> Ahmad Dajani </h1>
 	<a href="https://www.hmpg.net/">
